<?xml version="1.0" encoding="utf-8"?>
<!-- /** This file is part of GWBirthday.

    GWBirthday is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    GWBirthday is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Foobar.  If not, see <http://www.gnu.org/licenses/>.

	@year: 2011
	@author: Romain LEGUAY
	@mail: romain.leguay@gmail.com
 */ -->
<resources>
    <string name="app_name">GWBirthday</string>
    <string name="twelve">12</string>
    <string name="eleven">11</string>
    <string name="ten">10</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="happy_birthday">Joyeux Anniversaire!!!</string>

</resources>