<?xml version="1.0" encoding="utf-8"?>
<!-- /** This file is part of GWBirthday.

    GWBirthday is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    GWBirthday is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Foobar.  If not, see <http://www.gnu.org/licenses/>.

	@year: 2011
	@author: Romain LEGUAY
	@mail: romain.leguay@gmail.com
 */ -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="75dp"
        android:flipInterval="500" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="234dp"
            android:gravity="center_horizontal"
            android:text="@string/twelve"
            android:textColor="@color/green"
            android:textSize="100sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/eleven"
            android:textColor="@color/green"
            android:textSize="100sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/ten"
            android:textColor="@color/green"
            android:textSize="100sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/nine"
            android:textColor="@color/green"
            android:textSize="100sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/eight"
            android:textColor="@color/orange"
            android:textSize="100sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/seven"
            android:textColor="@color/orange"
            android:textSize="100sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/six"
            android:textColor="@color/orange"
            android:textSize="100sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/five"
            android:textColor="@color/orange"
            android:textSize="100sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/four"
            android:textColor="@color/red"
            android:textSize="100sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/three"
            android:textColor="@color/red"
            android:textSize="100sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/two"
            android:textColor="@color/red"
            android:textSize="100sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/one"
            android:textColor="@color/red"
            android:textSize="100sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/zero"
            android:textColor="@color/red"
            android:textSize="100sp" />
    </ViewFlipper>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="15dp"
        android:gravity="center" >

        <Button
            android:id="@+id/beer_button"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="@drawable/beer_button"
            android:padding="10dp" />

        <Button
            android:id="@+id/speed_button"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="@drawable/speed_button"
            android:padding="10dp" />

        <Button
            android:id="@+id/fire_button"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="@drawable/fire_button"
            android:padding="10dp" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="@drawable/stop_button"
            android:padding="10dp" />
    </LinearLayout>

</LinearLayout>